<resources>
    <string name="app_name">hackathontask</string>
    <string name="start_date">Start Date:</string>
    <string name="please_top_to_choose_start_date">Please top to choose start date</string>
    <string name="end_date">End Date:</string>
    <string name="please_top_to_choose_end_date">Please top to choose end date</string>
    <string name="min_count">min count</string>
    <string name="max_count">max count</string>
    <string name="search_records">Search Records</string>
</resources>
